# embeddingsearchtools

./: .gitignore  Cargo.toml  README.md
.agents/commands/: pr.md
.github/workflows/: release.yml
ci/: README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  serve.rs
crates/core/: Cargo.toml  build.rs
crates/core/examples/: perf.rs
crates/core/models/: README.md
crates/core/src/: embed.rs  error.rs  hnsw.rs  index.rs  lexical.rs  lib.rs  simd.rs  store.rs
docs/: SETUP.md
docs/workflows/: ci.yml  release.yml
scripts/: fetch-model.sh
ts/: client.ts
