[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/kolisachint/embeddingsearchtools"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# ONNX / MiniLM stack — only pulled when the `onnx` feature is enabled.
# `ort` 2.x is prerelease-only, so the version must be pinned explicitly.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "download-binaries"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ndarray = "0.16"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
