[package]
name = "embsearch-cli"
description = "CLI + stdio daemon for embsearch: index, query, update, and serve embeddings."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "embsearch"
path = "src/main.rs"

[dependencies]
embsearch-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true

[features]
default = []
# Forward the ONNX/MiniLM backend to the core crate.
onnx = ["embsearch-core/onnx"]
