[package]
name = "embsearch-core"
description = "Embedding generation + vector search core: embedder abstraction, flat index, persistence."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# The real MiniLM weights (fetched by scripts/fetch-model.sh) must never be
# packaged for crates.io: they are ~23 MB and blow past the 10 MB package cap.
# `cargo` ignores git's skip-worktree, so exclude them explicitly here. build.rs
# synthesizes empty placeholders when absent so the `onnx` feature still
# compiles from a published crate (see build.rs).
exclude = ["models/model.onnx", "models/tokenizer.json"]

[lib]
name = "embsearch_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Enabled only with the `onnx` feature (real MiniLM inference).
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[features]
default = []
# Real MiniLM embeddings via ONNX Runtime. Requires the ONNX Runtime native
# library and the bundled model weights (see crates/core/models/).
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]
